# ag-cli

./: .gitignore  ISSUE_LOG.md  PROJECT_LOG.md  README.md  SLACK_REPORT_2026-02-26.md  STATUS_2026-02-26.md  WORKLOG_2026-02-26.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
agcli/: browser.py  cli.py  config.py  llm.py  models.py  orchestrator.py
src/: agent-manager.ts  browser.js  browser.ts  cli.js  cli.ts  config.js  config.ts  cross-surface.ts  errors.ts  llm.js  llm.ts  logger.ts  orchestrator.js  orchestrator.ts  risk.ts  types.ts  workers.js  workers.ts
